# BoosterT1mjlab

./: .gitignore  .venv  LICENSE  Makefile  README.md  export_getup_onnx.py  pyproject.toml
src/booster_t1_mjlab/: __init__.py
src/booster_t1_mjlab/amp_rsl_rl/: env.py
src/booster_t1_mjlab/amp_rsl_rl/algorithms/: amp_ppo.py  distillation.py  ppo.py
src/booster_t1_mjlab/amp_rsl_rl/modules/: actor_critic.py  actor_critic_recurrent.py  rnd.py  student_teacher.py  student_teacher_recurrent.py
src/booster_t1_mjlab/amp_rsl_rl/networks/: memory.py
src/booster_t1_mjlab/amp_rsl_rl/runners/: amp_on_policy_runner.py  on_policy_runner.py
src/booster_t1_mjlab/amp_rsl_rl/storage/: rollout_storage.py
src/booster_t1_mjlab/robots/: __init__.py
src/booster_t1_mjlab/robots/boostert1/: t1_constants.py
src/booster_t1_mjlab/robots/boostert1/xmls/: T1_21dof_deploy.xml  T1_23dof_deploy.xml  ball.xml
src/booster_t1_mjlab/scripts/: csv_to_npz_t1.py  export_beyondamp.py  kick_pkl_to_npz.py  list_envs.py  pkl_to_npz_t1.py  play.py  play_beyondamp.py  play_kick.py  preview_motion.py  retarget_g1_to_t1.py  t1_motion_pkl_to_npz.py  train.py  train_beyondamp.py  trim_motion.py
src/booster_t1_mjlab/tasks/: registry.py
src/booster_t1_mjlab/tasks/amp_loco/: __init__.py  amp_env_cfg.py
src/booster_t1_mjlab/tasks/amp_loco/config/t1/: __init__.py  env_cfgs.py  rl_cfg.py
src/booster_t1_mjlab/tasks/amp_loco/mdp/: __init__.py  events.py
src/booster_t1_mjlab/tasks/amp_loco/rl/: __init__.py  runner.py
src/booster_t1_mjlab/tasks/amp_loco_beyond/: __init__.py  amp_env_cfg.py
src/booster_t1_mjlab/tasks/amp_loco_beyond/agents/: amp_ppo_cfg.py
src/booster_t1_mjlab/tasks/getup/: __init__.py  getup_env_cfg.py
src/booster_t1_mjlab/tasks/getup/config/: __init__.py
src/booster_t1_mjlab/tasks/getup/config/t1/: __init__.py  env_cfgs.py  rl_cfg.py
src/booster_t1_mjlab/tasks/getup/mdp/: actions.py  events.py  rewards.py  terminations.py
src/booster_t1_mjlab/tasks/getup/rl/: runner.py
src/booster_t1_mjlab/tasks/kick/agents/: amp_ppo_cfg.py
src/booster_t1_mjlab/tasks/kick/config/t1/: __init__.py  env_cfgs.py  rl_cfg.py
src/booster_t1_mjlab/tasks/kick/mdp/: __init__.py  events.py  kick_command.py  observations.py  rewards.py  terminations.py
src/booster_t1_mjlab/tasks/kick/motions/: WhatsApp_Video_2026-06-19_at_14.13.30_1_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.30_2_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.30_3_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.30_4_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.30_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.31_1_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.31_3_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.31_4_booster_t1.npz  WhatsApp_Video_2026-06-19_at_14.13.31_booster_t1.npz
src/booster_t1_mjlab/tasks/kick/motions/old_far_kicks/: WhatsApp_Video_2026-06-19_at_14.13.31_2_booster_t1.npz  kick_01.npz  kick_01_close.npz  kick_02.npz  kick_03.npz  kick_03_close.npz  kick_04.npz  kick_05.npz  kick_06.npz  (+32 more)
src/booster_t1_mjlab/tasks/tracking/: __init__.py
src/booster_t1_mjlab/tasks/tracking/motions/: booster_t1_motion.pkl  t1_booster_motion.npz  t1_bruce_lee.npz  t1_dance_102.npz
src/booster_t1_mjlab/tasks/velocity/: __init__.py  velocity_env_cfg.py
src/booster_t1_mjlab/tasks/velocity/config/: __init__.py
src/booster_t1_mjlab/tasks/velocity/mdp/: rewards.py
(+24 files in other folders)
