[project]
name = "booster-t1-mjlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kayden Knapik", email = "kaydenknapik@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab",
    "beyondAMP",
    "rsl-rl-amp",
    "amp-tasks",
    "amp-tasks-mjlab",
    "mujoco>=3.8.0,<3.9.0",
    "mujoco-warp>=3.8.0.1,<3.9.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
    "ruff>=0.14.0",
]

[tool.uv.sources]
beyondAMP = { path = "beyondAMP/source/beyondAMP", editable = true }
rsl-rl-amp = { path = "beyondAMP/source/rsl_rl_amp", editable = true }
amp-tasks = { path = "beyondAMP/source/amp_tasks", editable = true }
amp-tasks-mjlab = { path = "beyondAMP/source/amp_tasks_mjlab", editable = true }

[project.scripts]
booster-t1-mjlab = "booster_t1_mjlab:main"
booster_t1_train = "booster_t1_mjlab.scripts.train:main"
booster_t1_play = "booster_t1_mjlab.scripts.play:main"
booster_t1_list_envs = "booster_t1_mjlab.scripts.list_envs:main"
booster_t1_train_beyondamp = "booster_t1_mjlab.scripts.train_beyondamp:main"
booster_t1_play_beyondamp = "booster_t1_mjlab.scripts.play_beyondamp:main"
booster_t1_export_beyondamp = "booster_t1_mjlab.scripts.export_beyondamp:main"
booster_t1_kick_pkl_to_npz = "booster_t1_mjlab.scripts.kick_pkl_to_npz:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
